tests/ui/consts/const-eval/const_panic-normalize-tabs-115498.rs
#![crate_type = "lib"]

struct Bug([u8; panic!{"\t"}]);
//~^ ERROR evaluation panicked
//~| NOTE: in this expansion of panic!
